--- a/ScoreCaclculator/app/src/main/res/values/strings.xml
+++ b/ScoreCaclculator/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="message_colourid">Colour Identification:</string>
     <string name="message_colourpts">%d colour points</string>
     <string name="message_pointstotal">%d Total Points</string>
-    <string name="message_wbpoints">%d wb points</string>
+    <string name="message_wbpoints">%d</string>
     <string name="message_nearballpoints">%d</string>
     <string name="message_farballpoints">%d</string>
     <string name="message_robothomepoints">%d</string>
